--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "chalk": "2.4.2",
-    "debug": "2.6.6",
+    "debug": ">=2.6.9",
     "express": "^4.16.4",
     "jquery": "3.3.1",
     "morgan": "1.9.1",
