--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "fulldebug": "@powershell -Command $env:DEBUG='*';node app.js",
+    "debug": "@powershell -Command $env:DEBUG='app';node app.js",
     "lint": "eslint app.js"
   },
   "author": "Peter Mei",
@@ -17,11 +19,21 @@
     "express": "^4.16.4",
     "jquery": "3.3.1",
     "morgan": "1.9.1",
+    "nodemon": "1.18.10",
     "popper.js": "1.14.7"
   },
   "devDependencies": {
     "eslint": "5.15.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.16.0"
+  },
+  "nodemonConfig":{
+    "restartable":"rs",
+    "ignore":["node_modules/**/nodemodules"],
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": "3000"
+    }
   }
 }
