--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "fulldebug": "@powershell -Command $env:DEBUG='*';node app.js",
-    "debug": "@powershell -Command $env:DEBUG='app';node app.js",
+    "debug": "@powershell -Command $env:DEBUG='app';nodemon node app.js",
     "lint": "eslint app.js"
   },
   "author": "Peter Mei",
@@ -20,16 +20,19 @@
     "jquery": "3.3.1",
     "morgan": "1.9.1",
     "nodemon": "1.18.10",
-    "popper.js": "1.14.7"
+    "popper.js": "1.14.7",
+    "pug": "2.0.3"
   },
   "devDependencies": {
     "eslint": "5.15.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.16.0"
   },
-  "nodemonConfig":{
-    "restartable":"rs",
-    "ignore":["node_modules/**/nodemodules"],
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": [
+      "node_modules/**/nodemodules"
+    ],
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
