--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "4.3.1",
     "chalk": "2.4.2",
     "debug": ">=2.6.9",
+    "ejs": "2.6.1",
     "express": "^4.16.4",
     "jquery": "3.3.1",
     "morgan": "1.9.1",
