--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "library",
   "version": "1.0.0",
-  "description": "",
+  "description": "node.js application",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "fulldebug": "@powershell -Command $env:DEBUG='*';node app.js",
-    "debug": "@powershell -Command $env:DEBUG='app';nodemon node app.js",
+    "debug": "@powershell -Command $env:DEBUG='app:*';nodemon node app.js",
     "lint": "eslint app.js"
   },
   "author": "Peter Mei",
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "jquery": "3.3.1",
     "morgan": "1.9.1",
+    "mssql": "5.0.3",
     "nodemon": "1.18.10",
     "popper.js": "1.14.7",
     "pug": "2.0.3"
